Bug 383544 - Unable to create new folder/file if '..' item is selected in current folder
Summary: Unable to create new folder/file if '..' item is selected in current folder
Status: RESOLVED FIXED
Alias: None
Product: krusader
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.6.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Krusader Bugs Distribution List
URL:
Keywords:
: 393267 (view as bug list)
Depends on:
Blocks:
 
Reported: 2017-08-15 12:47 UTC by Alexander Mentyu
Modified: 2018-05-06 00:15 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alexander Mentyu 2017-08-15 12:47:37 UTC
Create New -> Folder.../Text File... features needs improvement:

1. If current folder is empty and '..' item is selected - it's impossible to create new folder or new text file.

2. Also impossible to create new folder or new text file when '..' item is selected in current non-empty folder.
Comment 1 Paul 2017-08-15 17:07:50 UTC
Yes, I can confirm that behaviour. From the right click context menu "Create New ..." fails.

However "F7 Mkdir" does work and can be used as a workaround until this bug is fixed.
Comment 2 Davide Gianforte 2017-08-15 20:19:16 UTC
Confirmed, the problem is present only on KrPopupMenu
Comment 3 Alex Bikadorov 2017-08-20 19:29:05 UTC
Git commit 3ec61a42eaf842a4ceec11aed5cf6c6154f7cd07 by Alexander Bikadorov.
Committed on 20/08/2017 at 19:20.
Pushed by abikadorov into branch 'master'.

Panel: fixed actions in PanelContextMenu ignored if ".." is current

FIXED: [ 383544 ] Unable to create new folder/file if '..' item is selected in current folder

M  +17   -21   krusader/Panel/panelcontextmenu.cpp

https://commits.kde.org/krusader/3ec61a42eaf842a4ceec11aed5cf6c6154f7cd07
Comment 4 Nikita Melnichenko 2018-04-19 06:17:44 UTC
*** Bug 393267 has been marked as a duplicate of this bug. ***