Panel: fixed actions in PanelContextMenu ignored if ".." is current

FIXED: [ 383544 ] Unable to create new folder/file if '..' item is selected in current folder
BUG: 383544